# cltk

./: .coveragerc  .gitignore  .landscape.yaml  .pre-commit-config.yaml  .pylintrc  .readthedocs.yaml  .readthedocs.yml  .travis.yml  CONTRIBUTING.md  ChangeLog  LICENSE  LLM_DEV_GUIDE.md  MANIFEST.in  Makefile  Phonological Rules.ipynb  README.md  README.rst  beta_test_2.py  concordance_dev.py  config.py  contributors.md  contributors.txt  corpus.py  dev-requirements.txt  diogenes.py  install_corpora.py  main.py  mkdocs.yml  pylint-ex.html  pylintrc  pyproject.toml  requirements-dev.txt  requirements.txt  sanskrit.rst  setup.py  soup_utils.py  test_reuse.py  test_space.py  test_tmp.py  test_tokenize.py  (+3 more)
.circleci/: config.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  pip-install-check.yml
api/: public_manifest.json
cltk/: .Python  __init__.py  __version__.py  beta_convert.py  beta_convert_test.py  betacode_translations.py  cltk.py  compiler.py  compiler_ex_3.py  compiler_no_trans.py  corpus_compiler.py  corpus_compiler_multiline_insert.py  corpus_compiler_multiline_insert_2.py  corpus_compiler_multiline_insert_3.py  exceptions.py  nlp.py  pip-selfcheck.json  replacer.py
cltk/book/: latin.py
cltk/codes/: __init__.py  glottolog.py
cltk/corpus/: README.md  __init__.py  cltk_logging.py  formatter.py  importer.py  readers.py  swadesh.py
cltk/corpus_api/: corpus.py  doc.py
cltk/dependency/: __init__.py  stanford.py
cltk/exceptions/: __init__.py
cltk/include/: python2.7
cltk/inflection/: utils.py
cltk/ir/: boolean.py  query.py
cltk/lemmatize/: backoff.py  ensemble.py  readme.md
cltk/middle_old_german/: corpora.py
cltk/ner/: ner.py
cltk/normalize/: normalize.py  readme.md
cltk/phonology/: orthophonology.py  syllabify.py  utils.py
cltk/plots/: README.md  dispersionPlot.py
cltk/prosody/: non.py
cltk/reuse/: levenshtein.py
cltk/semantics/: frequency.py  lemmatizer.py
cltk/stem/: lemma.py
cltk/stop/: build_stopwords_list.py  classical_chinese.py  latin.py  latin_.py  make_stopwords_list.py  stop.py
cltk/tag/: lapos.py  named_entities_fr.py  ner.py  ner_fr.py  pos.py  treebanks.py
cltk/tests/: README.md  download_test_corpora.py  flycheck_test_corpus.py  french.pickle  phi5_fake_authtab_for_testing.txt  test_akkadian.py  test_book.py  test_cltk.py  test_corpus.py  test_distributed_corpus.py  test_ex.py  test_indian_syllabifier.py  test_inflection.py  test_ir.py  test_lemmatize.py  test_ner.py  test_normalize.py  test_old_norse.py  test_phonology.py  test_prosody.py  test_resuse.py  test_scansion.py  test_semantics.py  test_stem.py  test_stem_fr.py  test_stop.py  test_support.py  test_tag.py  test_test_middle_high_german.py  test_text_reuse.py  test_tmp.py  test_tokenize.py  test_tokenize_fr.py  test_utils.py  test_vector.py  tlg_fake_authtab_for_testing.txt  tlgu_test_text_beta_code.txt  training_file_test.py  training_sentences.txt
cltk/text_reuse/: automata  automata.py  comparison.py  levenshtein.py  text_reuse.py  treebanks.py
cltk/tokenize/: __init__.py  greek.py  indian_tokenizer.py  latin.py  latin_exceptions.py  line.py  sentence.py  sentence2.py  sentence_tokenizer_greek.py  sentence_tokenizer_latin.py  skip_gram.py  tokenize.py  utils.py  word.py
cltk/tokenizers/: __init__.py  build_tokenizer.py  phil1.txt  sentence_tokenizer.py  sentence_tokenizer_notes.py  sentences_tokenized_phil1.txt  sents_cael.txt  tokenize.py  tokenizers.py  training_sentences.txt  (+1 more)
corpora/: README.md  latin_library.py  perseus_greek.py  perseus_latin.py  phi5.py  tlg.py
docs/: Makefile  about.rst  acknowledgements.md  advanced-configuration.md  advanced-model-configuration.md  advanced-prompting.md  akkadian.rst  ancient_egyptian.rst  arabic.rst  aramaic.rst  bengali.rst  chinese.rst  citation.rst  classical_greek.rst  classical_latin.rst  cltk-data-types.md  cltk.alphabet.grc.rst  cltk.alphabet.rst  cltk.codes.rst  cltk.core.rst  cltk.corpora.rst  cltk.data.rst  cltk.dependency.rst  cltk.embeddings.rst  cltk.exceptions.rst  cltk.filtering.rst  cltk.languages.rst  cltk.lemmatize.french.rst  cltk.lemmatize.greek.rst  cltk.lemmatize.latin.rst  cltk.lemmatize.old_english.rst  cltk.lemmatize.rst  cltk.lexicon.rst  cltk.ner.rst  cltk.phonology.akkadian.rst  cltk.phonology.ang.rst  cltk.phonology.arabic.rst  cltk.phonology.arabic.utils.pyarabic.rst  cltk.phonology.arabic.utils.rst  cltk.phonology.arb.rst  (+178 more)
evaluation/: compare_all_models.py  comparison_report.md  comparison_report_anci1242.md  comparison_report_lati1261.md  report.md
examples/: beta_convert_ex.py  compile_example.py  compiler_ex_3.py  pipeline_greek_iambic.toml  scan_iambic_trimeter.py  try.py
medieval/: corpora.py
notebooks/: Add Process to Pipeline.ipynb  CLTK Demonstration.ipynb  CLTK data types.ipynb  Demo of Pipeline for all languages.ipynb  Make custom Process and add to Pipeline.ipynb  Tree API.ipynb
old_french_middle_french/: Lexique_cleanup.py  ReadME  lex.txt  lexique.csv  lexiquedelancienfrancais.txt  txttocsv.py
researchProject/: processor.py
scripts/: build_glottolog_models.py  download_all_models.py  download_misc_dependencies.py  example_export_targets.py  example_greek_nlp.py  example_greek_readers_guide.md  example_greek_readers_guide.py  example_igt.html  example_igt.tex  example_readers.html  example_tei.xml  example_user_defined_language.py  make_glottolog_languages.py  pipeline_example.py  pipeline_example.py_bak  pipeline_latin_genai.toml  scan_iambic_trimeter.py  tlg_example.py  trigger_github_release.py
src/: cleaner.py  processor.py
tests/: conftest.py  test_alphabet.py  test_chatgpt.py  test_cltk.py  test_cltkv1.py  test_corpora.py  test_dependency.py  test_embeddings.py  test_lame.py  test_lemmatize.py  test_main.py  test_morphology.py  test_phonology.py  test_prosody.py  test_public_api_snapshot.py  test_sanity_lat_only.py  test_sanity_no_internet.py  test_sentence_splitter_regexes.py  test_stem.py  test_tag.py  test_text.py  test_tlgu.py  test_tokenize_and_sent.py  test_utils.py
tokenize/: sentence_tokenizer_greek.py
(+5034 files in other folders)
